# QtnProperty

./: CMakeLists.txt  README.md
Demo/Simple/: CMakeLists.txt  main.cpp
QtnProperty/: CMakeLists.txt  PropertyBase.cpp  PropertyBase.h  QtnProperty.pri
